<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"><![CDATA[/]]><![CDATA[/>]]>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="406dp"
        android:layout_height="429dp"
        android:contentDescription="@string/TopPic"
        android:src="@drawable/group_5"
        app:layout_constraintBottom_toTopOf="@id/colorfulText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/colorfulText"
        android:layout_width="271dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/colorfulText"
        android:src="@drawable/component_1__1"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/cardRectangle"
        android:src="@drawable/rectangle_6"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintLeft_toRightOf="@id/colorfulText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginTop="452dp"
        android:contentDescription="@string/BigText"
        android:text="@string/make_paying_easier_with_wallet"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/colorfulCircle"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/ColorfulcCircle"
        android:src="@drawable/exclusion_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <View
        android:id="@+id/whiteCircle"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <View
        android:id="@+id/whiteCircle2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:layout_width="184dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorfulCircle"
        />
</androidx.constraintlayout.widget.ConstraintLayout>